--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -93,10 +93,11 @@ h1, h2, h3, h4, h5, p {
   border: none;
   font-size: 16px;
   flex-grow: 1;
+  margin-top: 5px;
   background-color: var(--border-color);
   border-radius: 6px;
   margin-left: 10px;
-  padding: 10px 25px;
+  padding: 10px 10px;
 }
 
 .search-btn, .cancel-btn {
@@ -182,7 +183,7 @@ h1, h2, h3, h4, h5, p {
   line-height: 1.5; 
   background-color: rgba(0,0,0,0);
   color: var(--primary-text-color);
-  margin: 0px 6px;
+  margin: 0px 4px;
   font-size: var(--default-font-size); /* Button font size */
   border: 0;
   border-radius: 6px; 
@@ -441,7 +442,7 @@ margin-top: 20px;
   } 
 
   #nb-icon {
-    padding: 11px;
+    padding: 11px 4px;
   }
 
 
@@ -661,10 +662,11 @@ margin-top: 20px;
   
   .search-input {
      background-color: var(--dark-mode-border-color);
+     color: var(--dark-mode-text-color);
      }
   
   .search-form {
-     background-color: var(--dark-mode-body-color);
+     background-color: var(--dark-mode-main-color);
   }
 
 }
